--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,300&display=swap');
+:root {
+	scroll-behavior: smooth;
+}
 * {
 	border: 0;
 	box-sizing: inherit;
@@ -22,7 +26,8 @@ html {
 	padding: 0;
 	margin: 0;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-	font-family: 'droid-sans-mono', 'bebas-neue-by-fontfabric', monospace;
+	font-family: 'Lato', '-apple-system', 'BlinkMacSystemFont', '"Segoe UI"', 'Roboto', '"Helvetica Neue"', 'Arial', 'sans-serif', '"Apple Color Emoji"',
+		'"Segoe UI Emoji"', '"Segoe UI Symbol"';
 }
 
 body {
@@ -32,7 +37,8 @@ body {
 	font-size: 1.6rem;
 	overscroll-behavior-y: none;
 	-webkit-overflow-scrolling: touch;
-	font-family: 'droid-sans-mono', 'bebas-neue-by-fontfabric', monospace;
+	font-family: 'Lato', '-apple-system', 'BlinkMacSystemFont', '"Segoe UI"', 'Roboto', '"Helvetica Neue"', 'Arial', 'sans-serif', '"Apple Color Emoji"',
+		'"Segoe UI Emoji"', '"Segoe UI Symbol"';
 }
 
 a {
