--- a/src/components/Navigation/Links/Links.module.scss
+++ b/src/components/Navigation/Links/Links.module.scss
@@ -1,22 +1,23 @@
 .inner_text {
 	display: flex;
 	align-items: center;
-	margin: 1rem;
+	padding: 1rem 1rem 1rem 2rem;
 	font-weight: 300;
 	transition: 0.2s;
-
 	& > svg {
 		margin-right: 1rem;
-		font-size: 2.5rem;
+		font-size: 1.2rem;
+		color: inherit;
+
 		@media (min-width: 960px) {
 			margin: 0;
 		}
 	}
-	& > p {
-		color: var(--text-secondary-color);
+	& > h6 {
+		color: inherit;
 	}
 	&:hover {
-		color: var(--primary-color);
+		color: var(--text-primary-color);
 	}
 	@media (min-width: 960px) {
 		flex-direction: column;
@@ -25,12 +26,10 @@
 }
 
 .container {
-	padding: 20px;
+	padding-top: 100px;
+	color: var(--text-secondary-color);
 	.activeLink {
-		color: var(--primary-color);
-	}
-	& > a {
-		color: grey;
+		color: var(--text-primary-color);
 	}
 	@media (min-width: 960px) {
 		padding: 0;
