--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -1,7 +1,11 @@
 .nav {
+	position: fixed;
+	top: 10px;
+	right: 10px;
 	padding: 1rem;
 	display: flex;
 	justify-content: flex-end;
+	z-index: 2000;
 	@media (min-width: 960px) {
 		padding-right: 4rem;
 	}
