--- a/src/components/Navigation/Links/Links.module.scss
+++ b/src/components/Navigation/Links/Links.module.scss
@@ -29,7 +29,7 @@
 	padding-top: 100px;
 	color: var(--text-secondary-color);
 	.activeLink {
-		color: var(--text-primary-color);
+		color: var(--contrast);
 	}
 	@media (min-width: 960px) {
 		padding: 0;
