--- a/src/components/Welcome/Welcome.module.scss
+++ b/src/components/Welcome/Welcome.module.scss
@@ -1,15 +1,20 @@
 .welcome_container {
-	position: relative;
 	display: flex;
+	flex-direction: column;
 	align-items: center;
-	min-height: 95vh;
+	min-height: 100vh;
 	width: 100%;
+}
+
+.animation_container {
+	margin-top: 60px;
+	width: 90%;
+	max-width: 600px;
 }
 
 .text_container {
 	margin: 10rem auto 0;
 	padding-left: 1rem;
-	// text-align: center;
 }
 
 .background_image {
