--- a/src/components/Welcome/Welcome.module.scss
+++ b/src/components/Welcome/Welcome.module.scss
@@ -1,30 +1,48 @@
 .welcome_container {
 	display: flex;
-	flex-direction: column;
+	flex-direction: column-reverse;
 	align-items: center;
+	justify-content: space-around;
 	min-height: 100vh;
 	width: 100%;
+	@media (min-width: 960px) {
+		margin-top: 100px;
+		flex-direction: row-reverse;
+		align-items: flex-start;
+		justify-content: center;
+	}
 }
 
 .animation_container {
-	margin-top: 60px;
 	width: 90%;
-	max-width: 600px;
+	max-width: 500px;
 }
 
 .text_container {
+	position: relative;
 	margin: 10rem auto 0;
 	padding-left: 1rem;
+	@media (min-width: 960px) {
+		margin: 10rem 50px 0;
+	}
 }
 
-.background_image {
+.background_chevrons {
 	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	width: 90%;
-	max-width: 500px;
-	filter: grayscale(0.8);
-	opacity: 0.2;
-	z-index: 2;
+	top: -100px;
+	& svg {
+		position: absolute;
+
+		color: var(--text-secondary-color);
+		opacity: 0.05;
+	}
+	& > svg:nth-of-type(1) {
+		left: -80px;
+		font-size: 300px;
+	}
+	& > svg:nth-of-type(2) {
+		top: 20px;
+		left: 10px;
+		font-size: 350px;
+	}
 }
