Add About_me and mr Blobby

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,7 +4,7 @@
 	scroll-behavior: smooth;
 	// Accent Colors
 	--primary-color: #335ac0;
-	--secondary-color: #3570ca;
+	--secondary-color: #d9e6f5;
 	--contrast: #2ab987;
 	--error-color: #710000;
 	--success-color: #5d9c60;
