--- a/src/components/Welcome/Welcome.module.scss
+++ b/src/components/Welcome/Welcome.module.scss
@@ -6,10 +6,10 @@
 	min-height: 100vh;
 	width: 100%;
 	@media (min-width: 960px) {
-		margin-top: 100px;
 		flex-direction: row-reverse;
-		align-items: flex-start;
+		align-items: center;
 		justify-content: center;
+		min-height: 70vh;
 	}
 }
 
