--- a/src/styles/IndexPage.module.scss
+++ b/src/styles/IndexPage.module.scss
@@ -2,7 +2,7 @@
 	position: relative;
 	display: flex;
 	flex-direction: column;
-	align-items: flex-start;
-	justify-content: center;
+	align-items: center;
+	justify-content: stretch;
 	width: 100%;
 }
