Add Tech_stack and ready Welcome_page

--- a/src/components/SocialMedia/SocialMedia.module.scss
+++ b/src/components/SocialMedia/SocialMedia.module.scss
@@ -13,8 +13,10 @@
 }
 
 .icon_container {
-	padding: 0 15px;
-	text-align: center;
+	& a {
+		padding: 0 15px;
+		text-align: center;
+	}
 	& svg {
 		vertical-align: middle;
 		font-size: 30px;
