--- a/src/components/Welcome/Welcome.module.scss
+++ b/src/components/Welcome/Welcome.module.scss
@@ -21,7 +21,7 @@
 .text_container {
 	position: relative;
 	margin: 10rem auto 0;
-	padding-left: 1rem;
+	padding: 1rem;
 	@media (min-width: 960px) {
 		margin: 10rem 50px 0;
 	}
