--- a/src/components/About_me/About_me.module.scss
+++ b/src/components/About_me/About_me.module.scss
@@ -2,10 +2,15 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	margin-top: 5rem;
+	padding: 3rem 0;
+	background-color: var(--primary-color);
+	width: 100%;
 	@media (min-width: 960px) {
 		flex-direction: row;
 		align-items: center;
 		justify-content: center;
+		padding-bottom: 10rem;
 		margin: 50px 0;
 	}
 }
@@ -13,8 +18,8 @@
 .picture_holder {
 	position: relative;
 	margin: 50px 0 30px;
-	max-width: 300px;
-	max-height: 300px;
+	max-width: 200px;
+	max-height: 200px;
 	& img {
 		width: 100%;
 	}
