--- a/src/components/Tech_stack/Tech_stack.module.scss
+++ b/src/components/Tech_stack/Tech_stack.module.scss
@@ -1,46 +1,7 @@
-.table {
-	& i {
-		font-size: 3rem;
+.tech_stack_container {
+	width: 100%;
+	padding: 20px;
+	@media (min-width: 960px) {
+		margin-top: -200px;
 	}
-}
-
-.badge_container {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	margin: 10px;
-	cursor: pointer;
-	& i {
-		font-size: 40px;
-	}
-	.badge_name {
-		margin: 20px 0 10px;
-		padding: 20px 0 0;
-		font-size: 10px;
-		position: relative;
-		transition: transform 0.2s;
-		&::before {
-			content: '';
-			position: absolute;
-			background: var(--contrast);
-			width: 60px;
-			height: 1px;
-			top: 0;
-			left: 50%;
-			margin: 0 0 0 -30px;
-			transition: transform 0.2s;
-		}
-	}
-	&:hover {
-		& .badge_name {
-			transform: translateY(-40px);
-			&::before {
-				transform: translateY(60px);
-			}
-		}
-	}
-}
-
-.td {
-	display: flex;
 }
