--- a/src/components/Layout.module.scss
+++ b/src/components/Layout.module.scss
@@ -7,6 +7,12 @@
 
 .main {
 	display: flex;
+	position: relative;
+	flex-direction: column;
+	align-items: center;
+	width: 100%;
+	justify-content: stretch;
+
 	flex-grow: 1;
 	overflow: hidden;
 }
