createPage in gatsby-node is working. Data available in templates.

--- a/src/components/Portfolio/Timeline/Timeline.module.scss
+++ b/src/components/Portfolio/Timeline/Timeline.module.scss
@@ -50,6 +50,6 @@
 	// stupid boxshadow around icons on vertical line
 	box-shadow: none;
 	@media (min-width: 1170px) {
-		transform: translate(5px, 6px);
+		// transform: translate(5px, 6px);
 	}
 }
