--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,6 +14,8 @@
 	// Background Colors
 	--light-bgc: #fff;
 	--dark-bgc: #292826;
+
+	--paper-box-shadow-3: 0px 3px 3px -2px rgba(0, 0, 0, 0.2), 0px 3px 4px 0px rgba(0, 0, 0, 0.14), 0px 1px 8px 0px rgba(0, 0, 0, 0.12);
 }
 * {
 	border: 0;
