--- a/src/components/Project/Image_full/Image_full.module.scss
+++ b/src/components/Project/Image_full/Image_full.module.scss
@@ -1,11 +1,10 @@
 .image_full_container {
 	margin: 40px auto;
-	width: 100%;
+	width: 90%;
 	max-width: 1200px;
-	border-radius: 4px;
-	box-shadow: var(--paper-box-shadow-3);
-	border-radius: 4px;
+	overflow: hidden;
 }
 .image_full {
+	display: block;
 	width: 100%;
 }
