--- a/src/components/Homepage/Badge/Badge.module.scss
+++ b/src/components/Homepage/Badge/Badge.module.scss
@@ -3,6 +3,7 @@
 	flex-direction: column;
 	padding: 20px 10px;
 	align-items: center;
+
 	@media (min-width: 960px) {
 		width: 33%;
 	}
@@ -35,4 +36,19 @@
 	width: 50px;
 	height: 50px;
 	padding: 10px 20px;
+}
+
+.row {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	min-width: 200px;
+	margin: 10px;
+	box-shadow: 0 1px 2px 0 var(--contrast);
+	& > img {
+		padding: 10px 0;
+	}
+	& > p {
+		padding: 0 10px;
+	}
 }
