--- a/src/components/Portfolio/Timeline/Timeline.module.scss
+++ b/src/components/Portfolio/Timeline/Timeline.module.scss
@@ -5,7 +5,7 @@
 	display: flex;
 	justify-content: center;
 	@media (min-width: 1170px) {
-		width: 80%;
+		width: 90%;
 	}
 	& > div {
 		width: 90%;
@@ -30,6 +30,7 @@
 	& > div {
 		// card
 		box-shadow: 0px 3px 3px -2px rgba(0, 0, 0, 0.2), 0px 3px 4px 0px rgba(0, 0, 0, 0.14), 0px 1px 8px 0px rgba(0, 0, 0, 0.12);
+		// box-shadow: none;
 		border-radius: 4px;
 		@media (min-width: 960px) {
 		}
