--- a/src/components/Navigation/Links/Links.module.scss
+++ b/src/components/Navigation/Links/Links.module.scss
@@ -17,7 +17,7 @@
 		color: inherit;
 	}
 	&:hover {
-		color: var(--text-primary-color);
+		color: var(--contrast);
 	}
 	@media (min-width: 960px) {
 		flex-direction: column;
