--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,6 +1,6 @@
 .footer_container {
 	width: 100%;
-	background-color: var(--contrast);
+	background-color: var(--primary-color);
 	& * {
 		color: white;
 	}
