Change colors in Nav

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,7 +2,7 @@
 	// Accent Colors
 	--primary-color: #335ac0;
 	--secondary-color: #d9e6f5;
-	--contrast: #2ab987;
+	--contrast: #4ac064;
 	--error-color: #710000;
 	--success-color: #5d9c60;
 	--text-primary-color: #292826;
