--- a/src/components/Navigation/Links/Links.module.scss
+++ b/src/components/Navigation/Links/Links.module.scss
@@ -1,4 +1,5 @@
 .inner_text {
+	position: relative;
 	display: flex;
 	align-items: center;
 	padding: 1rem 1rem 1rem 2rem;
@@ -13,18 +14,21 @@
 			margin: 0;
 		}
 	}
+
 	&:hover {
 		color: var(--primary-color);
 	}
+
 	@media (min-width: 960px) {
 		flex-direction: column;
 		align-items: center;
+		padding: 1rem;
 	}
 }
 
 .container {
 	padding-top: 100px;
-	color: black;
+	color: rgb(88, 88, 88);
 	.activeLink {
 		color: var(--primary-color);
 	}
