Add contact form to homepage

--- a/src/components/InTouch/InTouch.module.scss
+++ b/src/components/InTouch/InTouch.module.scss
@@ -1,10 +1,9 @@
 .container_full_width {
 	width: 100%;
-	margin: 4rem 0;
+	max-width: 500px;
 }
 
 .container_text {
-	margin: 3rem auto;
 	width: 90%;
 	max-width: 1000px;
 }
