--- a/src/components/GithubCalendar/GithubCalendar.module.scss
+++ b/src/components/GithubCalendar/GithubCalendar.module.scss
@@ -1,8 +1,7 @@
 .calendar {
-	margin: 3rem auto 0;
+	margin: 3rem auto 4rem;
 	width: 90%;
 	max-width: 800px;
-	// border: 1px solid black;
 	& svg {
 		width: 100%;
 	}
