--- a/src/styles/IndexPage.module.scss
+++ b/src/styles/IndexPage.module.scss
@@ -1,8 +1,8 @@
-.homepage_container {
-	position: relative;
+.contactWrapper {
 	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: stretch;
-	width: 100%;
+	justify-content: space-around;
+	flex-wrap: wrap;
+	margin: 2rem 0 8rem 0;
+	width: 90%;
+	max-width: 1200px;
 }
