--- a/src/styles/IndexPage.module.scss
+++ b/src/styles/IndexPage.module.scss
@@ -1,3 +1,11 @@
+.tech_stack_container {
+	width: 100%;
+	padding: 20px;
+	@media (min-width: 960px) {
+		margin-top: -200px;
+	}
+}
+
 .contactWrapper {
 	display: flex;
 	justify-content: space-around;
