--- a/src/components/Homepage/AboutMe/AboutMe.module.scss
+++ b/src/components/Homepage/AboutMe/AboutMe.module.scss
@@ -41,6 +41,10 @@
 	animation: blobby 15s linear infinite alternate forwards;
 }
 
+.rounded_image {
+	border-radius: 50%;
+}
+
 @keyframes blobby {
 	0%,
 	100% {
