add page transition link

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -65,3 +65,21 @@ p {
 span.contrast {
 	color: var(--contrast);
 }
+
+@keyframes fadeIn {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
+
+@keyframes fadeOut {
+	from {
+		opacity: 1;
+	}
+	to {
+		opacity: 0;
+	}
+}
